added related work on ITILV3 and references

--- a/refs.bib
+++ b/refs.bib
@@ -69,3 +69,37 @@
   year={2011},
   publisher={TSO, The Stationery Office}
 }
+
+@book{pmbok5,
+  title={A Guide to the Project Management Body of Knowledge (PMBOK{\textregistered} Guide)},
+  author={Project Management Institute},
+  isbn={9781935589679},
+  lccn={2012046112},
+  series={PMI Standard},
+  year={2013},
+  publisher={Project Management Institute, Incorporated}
+}
+
+@article{McNeillis01112005,
+author = {McNeillis, Paul}, 
+title = {Three good questions},
+volume = {47}, 
+number = {6}, 
+pages = {14-15}, 
+year = {2005}, 
+doi = {10.1093/itnow/bwi114}, 
+abstract ={Customers have a way of asking good questions. Of course, a lot of them are difficult ones and the results of trying to answer them can be quite amusing and informative. By sharing with you some of the more difficult questions I have been asked as head of professional services at BSI I hope to give you an insight into some useful approaches to getting the full business benefit from your standards.}, 
+URL = {http://itnow.oxfordjournals.org/content/47/6/14.abstract}, 
+eprint = {http://itnow.oxfordjournals.org/content/47/6/14.full.pdf+html}, 
+journal = {ITNOW} 
+}
+
+@article{ITGovAndMech,
+  title={IT governance and its mechanisms},
+  author={De Haes, Steven and Van Grembergen, Wim},
+  journal={Information Systems Control Journal},
+  volume={1},
+  pages={27--33},
+  year={2004},
+  publisher={INFORMATION SYSTEMS AUDIT AND CONTROL ASSOCIATION}
+}
