--- a/report.tex
+++ b/report.tex
@@ -2,6 +2,8 @@
 \usepackage{graphicx}
 \usepackage{fixltx2e}
 \usepackage{mathtools}
+\usepackage{lmodern}
+\usepackage{textcomp}
 \usepackage[nolist,nohyperlinks]{acronym}
 % Maintain images and tables within their respective sections
 \usepackage[section]{placeins}
@@ -15,9 +17,9 @@
 \begin{document}
 \title{Project Management and Maintenance on Information Systems Administration}
 
-\subtitle{Diogo Pinto - nº69905}
+\subtitle{Diogo Pinto - n\textordmasculine 69905}
 \author{Diogo.Reis.Pinto@tecnico.ulisboa.pt}
-\institute{Instituto Superior Técnico}
+\institute{Instituto Superior T\'{e}cnico}
 
 \maketitle
 
