--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -6,6 +6,7 @@
 
 \section{Introduction}
 
+Information technologies (IT) enable, enhance, and are embedded in a growing number of goods and services. They are connecting consumers and producers of services in ways previously not feasible, while contributing to the productivity of numerous sectors of the services industry such as financial services, communications, insurance, and retail services.3 Government agencies, too, have experienced similar gains associated with the use of IT.\par
 Currently, organizations moved from the limited perspective of profitability to a more wider view of the business, trying to maximize the business performance by increasing client satisfaction, products quality and management efficiency in comparison with the concurrency.\par
 Management on information systems is all about leadership, organizational structures and processes that ensure information systems support and alignment with organization's objectives. Information systems provide and competitive edge to concurrents, but an organization can only achieve management efficiency with well defined and matured processes. \par
 One important aspect for an organization take advantage of its concurrency is the way how it deals with receipt and categorization of project and maintenance requests. There is a inherent necessity to classify a new request in terms of opportunities  and value to the business as well as the risk associated with it, making it an important asset for the organization.\par
