added pmbok state of the art

--- a/sections/related-work.tex
+++ b/sections/related-work.tex
@@ -98,7 +98,7 @@ The ITIL service management practices are comprised of three main sets of produc
 \begin{figure}
 \centering
 \includegraphics[width=0.7\textwidth]{img/ITILVolumes.png}
-\caption{COBIT 5 coverage on other frameworks}
+\caption{ITIL V3 volumes}
 \end{figure}
 
 The core set, presented in figure XXX and the one we will consider for this thesis, consists of six publications: Introduction to ITIL Service Management Practices, Service Strategy, Service Design, Service Transition, Service Operation and Continual Service Improvement. Each one of this volumes is composed by practice fundamentals and principles, Lifecycle processes and activities, Supporting organization structures and roles, Technology considerations, Practice implementation and Challenges, risks and critical success factors.
@@ -165,6 +165,42 @@ One crucial aspect for the importance of ITIL on this thesis is the operational 
 The main objective to include ITIL knowledge for this thesis is to provide a complementary guidance on IT management, enhancing the business oriented view of COBIT with a operational view. COBIT 5 will allow us to take advantage of this complementarity, related to the concern of ISACA to make it more compliant with other frameworks, including COBIT, on the new version (relating to COBIT 4.1). 
 
 \subsubsection{PMBOK: A Guide to the Project Management Book of Knowledge}
+
+The Guide to the Project Management Body of Knowledge provides guidelines for managing individual projects and defines project management related concepts. It also describes the project management life cycle and its related processes, as well as the project life cycle.\cite{pmbok5}\par
+This guide is considered by many professionals in the area of business management as the main reference for processes and good practices in project management, in the way it defines the knowledge that are applicable to most project most of the time, and there is consensus about their value and usefulness.\par 
+The processes are presented relating them with the knowledge area they belong. The PMBOK presents the following areas of project management:
+
+\begin{itemize}
+  \item Integration Management
+  \item Scope Management
+  \item Time Management
+  \item Cost Management
+  \item Quality management
+  \item Human resource management
+  \item Communications management
+  \item Risk management
+  \item Procurement management
+  \item Stakeholder management
+\end{itemize} 
+
+Each group of processes is related with the life cycle of a project, being also grouped in five categories: Initiating, Planing, Executing, Monitoring and Control and Closing, directly related to the phase they are applied on the life cycle. For each process, it is presented the inputs, tools, techniques and outputs that are required to successfully implement it. All processes organized by group and area are presented in figure XXX\par
+
+\begin{figure}
+\centering
+\includegraphics[width=\textwidth]{img/PMBOKprocesses.png}
+\caption{PMBOK processes organized by group and area of knowledge}
+\end{figure}
+
+
+This guide also provides some background on the project management area, defining common vocabulary and establishing concepts necessary to fully understand all processes. Presents characteristics of projects, programmes and portfolios, roles of project managers and organizational aspects that influence the management process, like organizational structures, culture, assets or stakeholders.\par 
+Another important aspect of PMBOK is that is a more general framework, making it necessary to complement with other frameworks or guides when applying to a specific area. This guide only presents the general processes for project management, lacking on implementation details for specific areas, like the area of IT Management.\par 
+
+\subsubsection{PMBOK critical analysis}
+
+The importance of PMBOK for this thesis is related to its widely acceptance and adoption as the reference guide to project management by many professionals in the area, being tested and evaluated its importance in terms of good practices adopted in project management. Despite being more general and lacking in specificity to Information Systems Management, it can be complemented with the two previous frameworks presented (COBIT and ITIL), using some more detailed guidance of ITIL and COBIT to improve PMBOK focus to this thesis.\par
+PMBOK presents processes for all phases of the life cycle of a project, being too extensive considering the theme of this thesis and the time-frame available. For this scope, we will only be able to consider a subset of all processes presented, being necessary, in the solution's architecture phase of this thesis, present a mapping between processes covered on PMBOK relating with processes of COBIT and ITIL.
+
+
 
 
 
