--- a/sections/evaluation.tex
+++ b/sections/evaluation.tex
@@ -4,10 +4,5 @@
 % Evaluation
 % 
 
-\section{Evaluation (1/2pgs)}
+\section{Evaluation}
 
-Explain how you are going to show your results (statistical data, cpu performance etc). Answer the following questions:
-\begin{itemize}
-  \item Why is this solution going to be better than others.
-  \item How am I going to defend that it is better.
-\end{itemize}
